--- a/sql_to_python/html/output.html
+++ b/sql_to_python/html/output.html
@@ -2,88 +2,36 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body {font-family: Arial;}
-
-/* Style the tab */
-.tab {
-  overflow: hidden;
-  border: 1px solid #ccc;
-  background-color: #f1f1f1;
-}
-
-/* Style the buttons inside the tab */
-.tab button {
-  background-color: inherit;
-  float: left;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  padding: 14px 16px;
-  transition: 0.3s;
-  font-size: 17px;
-}
-
-/* Change background color of buttons on hover */
-.tab button:hover {
-  background-color: #ddd;
-}
-
-/* Create an active/current tablink class */
-.tab button.active {
-  background-color: #ccc;
-}
-
-/* Style the tab content */
-.tabcontent {
-  display: none;
-  padding: 6px 12px;
-  border: 1px solid #ccc;
-  border-top: none;
-}
-</style>
+<link rel="stylesheet" type="text/css" href="style.css">
+<script type="text/javascript" src="tab.js"></script>
 </head>
 <body>
+<h2>SQL - Python Translator</h2>
 
-<h2>Tabs</h2>
-<p>Click on the buttons inside the tabbed menu:</p>
-
+<!-- tab -->
 <div class="tab">
-  <button class="tablinks" onclick="openCity(event, 'London')">London</button>
-  <button class="tablinks" onclick="openCity(event, 'Paris')">Paris</button>
-  <button class="tablinks" onclick="openCity(event, 'Tokyo')">Tokyo</button>
+    <button class="tablinks" onclick="openCity(event, 'Q1')">Q1</button>
+    <button class="tablinks" onclick="openCity(event, 'Q2')">Q2</button>
+    <button class="tablinks" onclick="openCity(event, 'Q3')">Q3</button>
+    <button class="tablinks" onclick="openCity(event, 'Q4')">Q4</button>
+    <button class="tablinks" onclick="openCity(event, 'Q5')">Q5</button>
+    <button class="tablinks" onclick="openCity(event, 'Q6')">Q6</button>
+    <button class="tablinks" onclick="openCity(event, 'Q7')">Q7</button>
+    <button class="tablinks" onclick="openCity(event, 'Q8')">Q8</button>
+    <button class="tablinks" onclick="openCity(event, 'Q9')">Q9</button>
+    <button class="tablinks" onclick="openCity(event, 'Publisher')">Publisher</button>
 </div>
 
-<div id="London" class="tabcontent">
-  <h3>London</h3>
-  <p>London is the capital city of England.</p>
-</div>
-
-<div id="Paris" class="tabcontent">
-  <h3>Paris</h3>
-  <p>Paris is the capital of France.</p> 
-</div>
-
-<div id="Tokyo" class="tabcontent">
-  <h3>Tokyo</h3>
-  <p>Tokyo is the capital of Japan.</p>
-</div>
-
-<script>
-function openCity(evt, cityName) {
-  var i, tabcontent, tablinks;
-  tabcontent = document.getElementsByClassName("tabcontent");
-  for (i = 0; i < tabcontent.length; i++) {
-    tabcontent[i].style.display = "none";
-  }
-  tablinks = document.getElementsByClassName("tablinks");
-  for (i = 0; i < tablinks.length; i++) {
-    tablinks[i].className = tablinks[i].className.replace(" active", "");
-  }
-  document.getElementById(cityName).style.display = "block";
-  evt.currentTarget.className += " active";
-}
-</script>
-   
+<!-- table content -->
+<div id="Q1" class="tabcontent"><!-- table content --></div>
+<div id="Q2" class="tabcontent"><!-- table content --></div>
+<div id="Q3" class="tabcontent"><!-- table content --></div>
+<div id="Q4" class="tabcontent"><!-- table content --></div>
+<div id="Q5" class="tabcontent"><!-- table content --></div>
+<div id="Q6" class="tabcontent"><!-- table content --></div>
+<div id="Q7" class="tabcontent"><!-- table content --></div>
+<div id="Q8" class="tabcontent"><!-- table content --></div>
+<div id="Q9" class="tabcontent"><!-- table content --></div>
+<div id="Publisher" class="tabcontent"><!-- table content --></div>
 </body>
 </html> 
